2015-05-03 Erwin Waterlander <waterlan@xs4all.nl>
	* test/Makefile: Disable GB18030 tests for FreeBSD. Tests which convert
	  UTF-16 with surrogate pairs to GB18030 fail. Seen on FreeBSD 10.1.
	  Issue in wcstombs()?
	* common.h: Removed define of _XOPEN_SOURCE. When _XOPEN_SOURCE is
	  defined, the function lstat() is not found on FreeBSD 10.1.
	* common.c: Bug fix. When conversion of an UTF-16 file with binary
	  symbols was forced, null characters were not written in the output.
	* test: Added new test for UTF-16 file with null characters.

2015-04-01 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.2.1

2015-02-15 Erwin Waterlander <waterlan@xs4all.nl>
	* test/misc.t: Fix test for -f option.
	* test/chk_loc.sh: New script to test if locale is supported.
	* test/Makefile: Skip gb18030 test if zh_CN.gb18030 locale is not supported.
	* man/man1/dos2unix.pod: Update section GB18030 and option -m.

2015-02-11 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.2

2015-01-15 Armin Müller
	* common.c,dos2unix.c,unix2dos.c: Use %u in format strings for
	  unsigned ints.
	* common.c: Fixed typo in if condition in write_bom().

2015-01-15 Erwin Waterlander <waterlan@xs4all.nl>
	* test/gb18030.t: Added more tests.

2015-01-03 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Fixed wrong encoded titles in HTML manuals when Perl 5.18
	  pod2html was used. Thanks to Tom Christiansen.

2015-01-02 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile, man/man1/Makefile: add option --no-wrap to xgettext and
	  msgmerge. Translation Project standard is not to wrap.

2015-01-02 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Point to gettext manual html nodes instead of
	  the full gettext manual.

2014-12-31 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/dos2unix.pod: Cleanup man page. Thanks to Benno Schulenberg.

2014-12-30 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Changed some messages for better translations.
